@@ -25,6 +25,7 @@ import unittest
 def test_suite() -> unittest.TestSuite:
     names = [
         "diffstat",
+        "greenthreads",
         "paramiko_vendor",
         "release_robot",
         "swift",
